tests/sema/fail/v5_fail_str_data_field.ep
# COMPILE_FAIL: unknown field str.data

fun main(): void {
    let s = "abc"
    let p = s.data
}
